feat: make generated withdrawal recoverable [skip ci]
